Remove unique constraint and index on `greenway_id`, enforce uniqueness in application code, and update tests with validation logic